update for JCR based on JBoss Cache